feat: Style correction for index.html in the header

--- a/css/index.html
+++ b/css/index.html
@@ -23,7 +23,7 @@
 
 <body>
   <main>
-    <header>
+    <header class="header-container">
 
       <div class="navbar-container">
         <nav class="navbar">
