Add JS Content: JS Final Project

--- a/js/index.html
+++ b/js/index.html
@@ -103,5 +103,6 @@
     <script src="./js/classes.js"></script> -->
     <script src="./js/dom.js"></script>
     <script src="./js/local-storage.js"></script>
+    <script type="module" src="./js/import-export/import.js"></script>
   </body>
 </html>
